--- a/deploy_index_html.yml
+++ b/deploy_index_html.yml
@@ -4,10 +4,11 @@
   become: true
   tasks:
   - name: Create /var/www/html directory
+    become: true
     file:
       path: /var/www/html
       state: directory
-  - name: copy web.html
+  - name: copy dev web.html
     copy:
       src: "dev_web.html"
       dest: /var/www/html/index.html
