adding /var/www/html directory

--- a/deploy_index_html.yml
+++ b/deploy_index_html.yml
@@ -13,3 +13,6 @@
     copy:
       src: "dev_web.html"
       dest: /var/www/html/index.html
+      owener: root
+      group: root
+      mode: '0644'
