--- a/deploy_index_html.yml
+++ b/deploy_index_html.yml
@@ -8,6 +8,10 @@
     file:
       path: /var/www/html
       state: directory
+      owner: root
+      group: root
+      directory_mode: 0644
+      recursive: yes
   - name: copy dev web.html
     become: true
     copy:
